tools/crates/vendor/toml_edit/tests/fixtures/invalid/array/double-comma-1.stderr
TOML parse error at line 1, column 21
  |
1 | double-comma-1 = [1,,2]
  |                     ^
invalid array
expected `]`
